# c_interact_with_lua

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: mylib.h
include/cpp_to_lua/: script_bridge.h
include/lua_to_cpp/: game_engine.h  mylib.h  register_bindings.h
lua/: script.lua
lua/cpp_to_lua/: callbacks.lua
lua/lua_to_cpp/: demo_call_cpp.lua
src/: main.cpp  mylib.cpp
src/cpp_to_lua/: script_bridge.cpp
src/lua_to_cpp/: game_engine.cpp  mylib.cpp  register_bindings.cpp
